--- a/resume.css
+++ b/resume.css
@@ -42,7 +42,7 @@ dl {
 dt{
 	float: left;
 	font-family: Arial, Serif;
-	border-right: 2px solid black;
+	border-right: 2px solid gray;
 	font-style: italic;
 	text-align: right;
 	width: 170px;
